--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "requirejs": "~2.1.20"
   },
   "overrides": {
     "bootstrap-sass": {
@@ -12,6 +13,14 @@
         "assets/fonts/bootstrap/*",
         "assets/javascripts/bootstrap.js"
       ]
+    },
+    "modernizr": {
+      "main": []
+    }
+  },
+  "exportsOverride": {
+    "modernizr": {
+      "main": []
     }
   },
   "devDependencies": {
