--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.0",
+    "grunt-bower-task": "^0.4.0",
     "grunt-browser-sync": "^2.1.2",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
@@ -21,6 +22,7 @@
     "grunt-modernizr": "^0.6.0",
     "grunt-newer": "^1.1.0",
     "grunt-postcss": "^0.5.3",
+    "grunt-requirejs": "^0.4.2",
     "grunt-sass": "^1.0.0",
     "grunt-svgmin": "^2.0.1",
     "grunt-usemin": "^3.0.0",
@@ -46,5 +48,9 @@
         "single"
       ]
     }
+  },
+  "dependencies": {
+    "bower": "^1.4.1",
+    "bower-requirejs": "^1.1.3"
   }
 }
